fixed overflow issue. #8401

--- a/openscholar/modules/frontend/admin_panel/misc/component.css
+++ b/openscholar/modules/frontend/admin_panel/misc/component.css
@@ -7,7 +7,6 @@
     cursor: pointer;
     text-indent: 100%;
     white-space: nowrap;
-    overflow: hidden;
 }
 .menu-container {
     position: fixed;
